--- a/templates/login.html
+++ b/templates/login.html
@@ -2,9 +2,7 @@
 {% block title %}Login Page{% endblock %}
 
 {% block content %}
-<style>
-</style>
-<div class="mx-auto" style="width: 200px">
+<div class="title">
 	<p>Test:</p>
 	<form action="#" method="POST">
 		<p><input type="text" name="nm"/></p>
