--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <head>
-   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <script defer src="{{ url_for('static', filename='js/base.js') }}"></script>
-   <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
-   <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='icon/base.ico') }}" />
-   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet"/>
-   <title> {% block title %}
-		   {% endblock %}
-	</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<script defer src="{{ url_for('static', filename='js/base.js') }}"></script>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
+	<link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='icon/base.ico') }}" />
+	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet"/>
+	{% block head %}{% endblock %}
 </head>
 <body>
    <nav class="navbar">
