added meta tags

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="description" content=">Pibux.pl">
+	<meta name="author" content="Cloud11665">
+	<meta name="keywords" content="Sabat, Cloud, TFKLSNIGGER, github, pornhub">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script defer src="{{ url_for('static', filename='js/base.js') }}"></script>
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
 	<link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='icon/base.ico') }}" />
