added embed tags

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <head>
-	<meta name="description" content=">Pibux.pl">
 	<meta name="author" content="Cloud11665">
+	<meta name="description" content=">Pibux.pl">
+
+	<meta property="og:image" content="https://avatars2.githubusercontent.com/u/59028866?s=460&u=6562d1073dbc2e72b36071819b3eea0c69e9a71a&v=4">
+	<meta property="og:site_name" content="Sabat">
+	<meta property="og:title" content="Very good site">	
+
 	<meta name="keywords" content="Sabat, Cloud, TFKLSNIGGER, github, pornhub">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script defer src="{{ url_for('static', filename='js/base.js') }}"></script>
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
