--- a/templates/base.html
+++ b/templates/base.html
@@ -1,151 +1,166 @@
 <!DOCTYPE html>
+
 <head>
-	<meta name="author" content="Cloud11665">
-	<meta name="description" content=">Pibux.pl">
+	<meta name="author" content="Cloud11665" />
+	<meta name="description" content="Site made by Cloud11665" />
+	
+	<meta property="og:image "content="{{ url_for('static', filename='icon/logo.ico') }}"/>
+	<meta property="og:site_name" content="sabat.dev" />
+	<meta property="og:type" content="website" />
+	<meta property="og:description" content="Test description."/>
 
-	<meta property="og:image" content="https://avatars2.githubusercontent.com/u/59028866?s=460&u=6562d1073dbc2e72b36071819b3eea0c69e9a71a&v=4">
-	<meta property="og:site_name" content="Sabat">
-	<meta property="og:title" content="Very good site">	
+	<meta
+		name="keywords"
+		content="Bartek, Sabat, Bartek Sabat, VLO, github, python, html, css, JavaScript, blog"
+	/>
 
-	<meta name="keywords" content="Sabat, Cloud, TFKLSNIGGER, github, pornhub">
-
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<script defer src="{{ url_for('static', filename='js/base.js') }}"></script>
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
-	<link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='icon/base.ico') }}" />
-	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet"/>
+	<link
+		rel="stylesheet"
+		href="{{ url_for('static', filename='css/base.css') }}"
+	/>
+	<link
+		rel="shortcut icon"
+		type="image/x-icon"
+		href="{{ url_for('static', filename='icon/logo.ico') }}"
+	/>
+	<link
+		href="https://fonts.googleapis.com/css?family=Quicksand"
+		rel="stylesheet"
+	/>
 	{% block head %}{% endblock %}
 </head>
-<body>
-   <nav class="navbar">
-	  <ul class="navbar-nav">
-		 <li class="logo">
-			<a href="/#" class="nav-link">
-			   <span class="link-text logo-text">sabat.dev</span>
-			   <svg
-				  aria-hidden="true"
-				  focusable="false"
-				  data-prefix="fad"
-				  data-icon="angle-double-right"
-				  role="img"
-				  xmlns="http://www.w3.org/2000/svg"
-				  viewBox="0 0 448 512"
-				  class="svg-inline--fa fa-angle-double-right fa-w-14 fa-5x"
-				  >
-				  <g class="fa-group">
-					 <path
-						fill="currentColor"
-						d="M224 273L88.37 409a23.78 23.78 0 0 1-33.8 0L32 386.36a23.94 23.94 0 0 1 0-33.89l96.13-96.37L32 159.73a23.94 23.94 0 0 1 0-33.89l22.44-22.79a23.78 23.78 0 0 1 33.8 0L223.88 239a23.94 23.94 0 0 1 .1 34z"
-						class="fa-secondary"
-						></path>
-					 <path
-						fill="currentColor"
-						d="M415.89 273L280.34 409a23.77 23.77 0 0 1-33.79 0L224 386.26a23.94 23.94 0 0 1 0-33.89L320.11 256l-96-96.47a23.94 23.94 0 0 1 0-33.89l22.52-22.59a23.77 23.77 0 0 1 33.79 0L416 239a24 24 0 0 1-.11 34z"
-						class="fa-primary"
-						></path>
-				  </g>
-			   </svg>
-			</a>
-		 </li>
-		 <li class="nav-item">
-			<a href="/projects" class="nav-link">
-				<svg
-					aria-hidden="true"
-					focusable="false"
-					data-prefix="fas"
-					data-icon="code-branch"
-					class="svg-inline--fa fa-code-branch fa-w-12"
-					role="img"
-					xmlns="http://www.w3.org/2000/svg"
-					viewBox="0 0 384 512">
-					<path
-						fill="currentColor"
-						d="M384 144c0-44.2-35.8-80-80-80s-80 35.8-80 80c0 36.4 24.3 67.1 57.5 76.8-.6 16.1-4.2 28.5-11 36.9-15.4 19.2-49.3 22.4-85.2 25.7-28.2 2.6-57.4 5.4-81.3 16.9v-144c32.5-10.2 56-40.5 56-76.3 0-44.2-35.8-80-80-80S0 35.8 0 80c0 35.8 23.5 66.1 56 76.3v199.3C23.5 365.9 0 396.2 0 432c0 44.2 35.8 80 80 80s80-35.8 80-80c0-34-21.2-63.1-51.2-74.6 3.1-5.2 7.8-9.8 14.9-13.4 16.2-8.2 40.4-10.4 66.1-12.8 42.2-3.9 90-8.4 118.2-43.4 14-17.4 21.1-39.8 21.6-67.9 31.6-10.8 54.4-40.7 54.4-75.9zM80 64c8.8 0 16 7.2 16 16s-7.2 16-16 16-16-7.2-16-16 7.2-16 16-16zm0 384c-8.8 0-16-7.2-16-16s7.2-16 16-16 16 7.2 16 16-7.2 16-16 16zm224-320c8.8 0 16 7.2 16 16s-7.2 16-16 16-16-7.2-16-16 7.2-16 16-16z"
-						class="fa-secondary">
-				</path>
-				</svg>
-				<span class="link-text">Projects</span>
-			</a>
-		 </li>
-		 <li class="nav-item">
-			<a href="/contact" class="nav-link">
-				<svg
-					aria-hidden="true"
-					focusable="false"
-					data-prefix="fas"
-					data-icon="user"
-					class="svg-inline--fa fa-user fa-w-14"
-					role="img" 
-					xmlns="http://www.w3.org/2000/svg"
-					viewBox="0 0 448 512">
-						<path
-						fill="currentColor"
-						d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
-						class="fa-secondary"></path>
-				</svg>
-				<span class="link-text">Contact</span>
-			</a>
-		 </li>
-		 <li class="nav-item" id="themeButton">
-			<a href="#" class="nav-link">
-			   <svg
-				  class="theme-icon"
-				  id="lightIcon"
-				  aria-hidden="true"
-				  focusable="false"
-				  data-prefix="fad"
-				  data-icon="moon-stars"
-				  role="img"
-				  xmlns="http://www.w3.org/2000/svg"
-				  viewBox="0 0 512 512"
-				  class="svg-inline--fa fa-moon-stars fa-w-16 fa-7x"
-				  >
-				  <g class="fa-group">
-					 <path
-						fill="currentColor"
-						d="M320 32L304 0l-16 32-32 16 32 16 16 32 16-32 32-16zm138.7 149.3L432 128l-26.7 53.3L352 208l53.3 26.7L432 288l26.7-53.3L512 208z"
-						class="fa-secondary"
-						></path>
-					 <path
-						fill="currentColor"
-						d="M332.2 426.4c8.1-1.6 13.9 8 8.6 14.5a191.18 191.18 0 0 1-149 71.1C85.8 512 0 426 0 320c0-120 108.7-210.6 227-188.8 8.2 1.6 10.1 12.6 2.8 16.7a150.3 150.3 0 0 0-76.1 130.8c0 94 85.4 165.4 178.5 147.7z"
-						class="fa-primary"
-						></path>
-				  </g>
-			   </svg>
-			   <svg
-				  class="theme-icon"
-				  id="darkIcon"
-				  aria-hidden="true"
-				  focusable="false"
-				  data-prefix="fad"
-				  data-icon="sun"
-				  role="img"
-				  xmlns="http://www.w3.org/2000/svg"
-				  viewBox="0 0 512 512"
-				  class="svg-inline--fa fa-sun fa-w-16 fa-7x"
-				  >
-				  <g class="fa-group">
-					 <path
-						fill="currentColor"
-						d="M502.42 240.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.41-94.8a17.31 17.31 0 0 0-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4a17.31 17.31 0 0 0 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.41-33.5 47.3 94.7a17.31 17.31 0 0 0 31 0l47.31-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3a17.33 17.33 0 0 0 .2-31.1zm-155.9 106c-49.91 49.9-131.11 49.9-181 0a128.13 128.13 0 0 1 0-181c49.9-49.9 131.1-49.9 181 0a128.13 128.13 0 0 1 0 181z"
-						class="fa-secondary"
-						></path>
-					 <path
-						fill="currentColor"
-						d="M352 256a96 96 0 1 1-96-96 96.15 96.15 0 0 1 96 96z"
-						class="fa-primary"
-						></path>
-				  </g>
-			   </svg>
-			   <span class="link-text">Themes</span>
-			</a>
-		 </li>
-	  </ul>
-   </nav>
-   <main>
-		{% block content %}
 
-		{% endblock %}
-   </main>
+<body>
+	<nav class="navbar">
+		<ul class="navbar-nav">
+			<li class="logo">
+				<a href="/#" class="nav-link">
+					<span class="link-text logo-text">sabat.dev</span>
+					<svg
+						aria-hidden="true"
+						focusable="false"
+						data-prefix="fad"
+						data-icon="angle-double-right"
+						role="img"
+						xmlns="http://www.w3.org/2000/svg"
+						viewBox="0 0 448 512"
+						class="svg-inline--fa fa-angle-double-right fa-w-14 fa-5x"
+					>
+						<g class="fa-group">
+							<path
+								fill="currentColor"
+								d="M224 273L88.37 409a23.78 23.78 0 0 1-33.8 0L32 386.36a23.94 23.94 0 0 1 0-33.89l96.13-96.37L32 159.73a23.94 23.94 0 0 1 0-33.89l22.44-22.79a23.78 23.78 0 0 1 33.8 0L223.88 239a23.94 23.94 0 0 1 .1 34z"
+								class="fa-secondary"
+							></path>
+							<path
+								fill="currentColor"
+								d="M415.89 273L280.34 409a23.77 23.77 0 0 1-33.79 0L224 386.26a23.94 23.94 0 0 1 0-33.89L320.11 256l-96-96.47a23.94 23.94 0 0 1 0-33.89l22.52-22.59a23.77 23.77 0 0 1 33.79 0L416 239a24 24 0 0 1-.11 34z"
+								class="fa-primary"
+							></path>
+						</g>
+					</svg>
+				</a>
+			</li>
+			<li class="nav-item">
+				<a href="/projects" class="nav-link">
+					<svg
+						aria-hidden="true"
+						focusable="false"
+						data-prefix="fas"
+						data-icon="code-branch"
+						class="svg-inline--fa fa-code-branch fa-w-12"
+						role="img"
+						xmlns="http://www.w3.org/2000/svg"
+						viewBox="0 0 384 512"
+					>
+						<path
+							fill="currentColor"
+							d="M384 144c0-44.2-35.8-80-80-80s-80 35.8-80 80c0 36.4 24.3 67.1 57.5 76.8-.6 16.1-4.2 28.5-11 36.9-15.4 19.2-49.3 22.4-85.2 25.7-28.2 2.6-57.4 5.4-81.3 16.9v-144c32.5-10.2 56-40.5 56-76.3 0-44.2-35.8-80-80-80S0 35.8 0 80c0 35.8 23.5 66.1 56 76.3v199.3C23.5 365.9 0 396.2 0 432c0 44.2 35.8 80 80 80s80-35.8 80-80c0-34-21.2-63.1-51.2-74.6 3.1-5.2 7.8-9.8 14.9-13.4 16.2-8.2 40.4-10.4 66.1-12.8 42.2-3.9 90-8.4 118.2-43.4 14-17.4 21.1-39.8 21.6-67.9 31.6-10.8 54.4-40.7 54.4-75.9zM80 64c8.8 0 16 7.2 16 16s-7.2 16-16 16-16-7.2-16-16 7.2-16 16-16zm0 384c-8.8 0-16-7.2-16-16s7.2-16 16-16 16 7.2 16 16-7.2 16-16 16zm224-320c8.8 0 16 7.2 16 16s-7.2 16-16 16-16-7.2-16-16 7.2-16 16-16z"
+							class="fa-secondary"
+						></path>
+					</svg>
+					<span class="link-text">Projects</span>
+				</a>
+			</li>
+			<li class="nav-item">
+				<a href="/contact" class="nav-link">
+					<svg
+						aria-hidden="true"
+						focusable="false"
+						data-prefix="fas"
+						data-icon="user"
+						class="svg-inline--fa fa-user fa-w-14"
+						role="img"
+						xmlns="http://www.w3.org/2000/svg"
+						viewBox="0 0 448 512"
+					>
+						<path
+							fill="currentColor"
+							d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
+							class="fa-secondary"
+						></path>
+					</svg>
+					<span class="link-text">Contact</span>
+				</a>
+			</li>
+			<li class="nav-item" id="themeButton">
+				<a href="#" class="nav-link">
+					<svg
+						class="theme-icon"
+						id="lightIcon"
+						aria-hidden="true"
+						focusable="false"
+						data-prefix="fad"
+						data-icon="moon-stars"
+						role="img"
+						xmlns="http://www.w3.org/2000/svg"
+						viewBox="0 0 512 512"
+						class="svg-inline--fa fa-moon-stars fa-w-16 fa-7x"
+					>
+						<g class="fa-group">
+							<path
+								fill="currentColor"
+								d="M320 32L304 0l-16 32-32 16 32 16 16 32 16-32 32-16zm138.7 149.3L432 128l-26.7 53.3L352 208l53.3 26.7L432 288l26.7-53.3L512 208z"
+								class="fa-secondary"
+							></path>
+							<path
+								fill="currentColor"
+								d="M332.2 426.4c8.1-1.6 13.9 8 8.6 14.5a191.18 191.18 0 0 1-149 71.1C85.8 512 0 426 0 320c0-120 108.7-210.6 227-188.8 8.2 1.6 10.1 12.6 2.8 16.7a150.3 150.3 0 0 0-76.1 130.8c0 94 85.4 165.4 178.5 147.7z"
+								class="fa-primary"
+							></path>
+						</g>
+					</svg>
+					<svg
+						class="theme-icon"
+						id="darkIcon"
+						aria-hidden="true"
+						focusable="false"
+						data-prefix="fad"
+						data-icon="sun"
+						role="img"
+						xmlns="http://www.w3.org/2000/svg"
+						viewBox="0 0 512 512"
+						class="svg-inline--fa fa-sun fa-w-16 fa-7x"
+					>
+						<g class="fa-group">
+							<path
+								fill="currentColor"
+								d="M502.42 240.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.41-94.8a17.31 17.31 0 0 0-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4a17.31 17.31 0 0 0 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.41-33.5 47.3 94.7a17.31 17.31 0 0 0 31 0l47.31-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3a17.33 17.33 0 0 0 .2-31.1zm-155.9 106c-49.91 49.9-131.11 49.9-181 0a128.13 128.13 0 0 1 0-181c49.9-49.9 131.1-49.9 181 0a128.13 128.13 0 0 1 0 181z"
+								class="fa-secondary"
+							></path>
+							<path
+								fill="currentColor"
+								d="M352 256a96 96 0 1 1-96-96 96.15 96.15 0 0 1 96 96z"
+								class="fa-primary"
+							></path>
+						</g>
+					</svg>
+					<span class="link-text">Themes</span>
+				</a>
+			</li>
+		</ul>
+	</nav>
+	<main>{% block content %} {% endblock %}</main>
 </body>
