--- a/templates/home.html
+++ b/templates/home.html
@@ -2,10 +2,12 @@
 
 {% block head %}
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
+	<title>sabat.dev</title>
 {% endblock %}
 
 {% block content %}
 <div class="title">
+	
 	<div class="big">
 		<p>This site is under construction</p>
 	</div>
