--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
 	<nav class="navbar">
 		<ul class="navbar-nav">
 			<li class="logo">
-				<a href="/#" class="nav-link">
+				<a href="/" class="nav-link">
 					<span class="link-text logo-text">sabat.dev</span>
 					<svg
 						aria-hidden="true"
