--- a/static/css/base.css
+++ b/static/css/base.css
@@ -123,6 +123,19 @@ main {
 .navbar:-webkit-scrollbar-track {overflow: hidden;}
 .navbar::-webkit-scrollbar-thumb {overflow: hidden;}
 
+.title {
+	font-size: 2rem;
+	text-align: center;
+	height: 100vh;
+	font-weight: 700;
+	text-shadow: 0.5px 0.5px 0 #45966e;
+}
+
+.big {
+	font-size: 5rem;
+	text-shadow: 2px 2px 0 #45966e, 4px 4px 0 #326e50, 6px 6px 0 #2a5e44, 8px 8px 0 #1f4431;
+}
+
 
 /* Small screens */
 @media only screen and (max-width: 600px) {
@@ -134,6 +147,11 @@ main {
   main {
     margin: 0;
     word-wrap: break-word;
+  }
+
+  .big {
+    font-size: 3rem;
+    text-shadow: 1.5px 1.5px 0 #45966e, 3px 3px 0 #326e50, 4.5px 4.5px 0 #2a5e44, 6px 6px 0 #1f4431;
   }
 
   .logo {
