--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,6 @@
 	<p>Made using pure Html, CSS, JS</p>
 	</br>
 	<p>CONTACT</p>
-	<p><a href="https://github.com/Cloud11665" target="_blank">github</a></p>
+	<p><a class="link" href="https://github.com/Cloud11665" target="_blank">github</a></p>
 </div>
 {% endblock %}
