--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
 		<meta name="author" content="Cloud11665"/>
 		<meta name="description" content="Cloud's devlog/blog"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="keywords" content="Cloud11665, Bartek Sabat, Bartek, Sabat"/>
 		
 		<meta property="og:image "content="{{ url_for('static', filename='icon/logo.ico') }}"/>
@@ -14,8 +15,8 @@
 
 		<script defer src="{{ url_for('static', filename='js/base.js') }}"></script>
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/navbar/navbar.css') }}"/>
-		<link rel="stylesheet" href="{{ url_for('static', filename='css/navbar/navbar_themes.css')}}"/>
-		<link rel="stylesheet" href="{{ url_for('static', filename='css/navbar/navbar_contacts.css')}}"/>
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/navbar/navbar_themes.css') }}"/>
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/navbar/navbar_contacts.css') }}"/>
 		<link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='icon/logo.ico') }}"/>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand"/>
 		{% block head %}{% endblock %}
@@ -49,6 +50,21 @@
 							<path fill="currentColor" d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z" class="fa-secondary"></path>
 						</svg>
 						<span class="link-text">Contact</span>
+					</a>
+				</li>
+				<li class="nav-item">
+					<a href="/timetable" class="nav-link">
+						<svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="table" role="img"
+							xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-table fa-w-16 fa-3x">
+							<g class="fa-group">
+								<path fill="currentColor" d="M288 160v96h160v-96zm0 256h160v-96H288zM64 256h160v-96H64zm0 160h160v-96H64z"
+									class="fa-secondary"></path>
+								<path fill="currentColor"
+									d="M464 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h416a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48zM224 416H64v-96h160zm0-160H64v-96h160zm224 160H288v-96h160zm0-160H288v-96h160z"
+									class="fa-primary"></path>
+							</g>
+						</svg>
+						<span class="link-text">Timetable</span>
 					</a>
 				</li>
 				<li class="nav-item" id="themeButton">
