add params table to database and stats page

--- a/lib/flask_statistics/templates/flask_statistics_layout.html
+++ b/lib/flask_statistics/templates/flask_statistics_layout.html
@@ -29,6 +29,11 @@
     </div>
   </nav>
   -->
+  <style>
+    :root {
+      overflow: auto;
+    }
+  </style>
   <main class="container-fluid" style="padding-top: 3rem;">
     {%- block content -%}
     {%- endblock -%}
