--- a/lib/flask_statistics/templates/flask_statistics_index.html
+++ b/lib/flask_statistics/templates/flask_statistics_index.html
@@ -50,13 +50,15 @@
       </thead>
       <tbody>
         {%- for route in routes -%}
-        <tr>
-          <td><a href="{{url_for('statistics.index', path=route.path)}}">{{route.path}}</a></td>
-          <td>{{route.hits}}</td>
-          <td>{{route.unique_hits}}</td>
-          <td>{{route.last_requested.strftime("%Y-%m-%d %H:%M:%S")}}</td>
-          <td>{{route.average_response_time|round(5)}} s</td>
-        </tr>
+          {%- if route.hits > 4 -%}
+          <tr>
+            <td><a href="{{url_for('statistics.index', path=route.path)}}">{{route.path}}</a></td>
+            <td>{{route.hits}}</td>
+            <td>{{route.unique_hits}}</td>
+            <td>{{route.last_requested.strftime("%Y-%m-%d %H:%M:%S")}}</td>
+            <td>{{route.average_response_time|round(5)}} s</td>
+          </tr>
+          {%- endif -%}
         {%- endfor -%}
       </tbody>
     </table>
